--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@prisma/client": "^5.10.2",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-slot": "^1.0.2",
@@ -33,6 +34,7 @@
 		"eslint-plugin-prettier": "^5.1.3",
 		"postcss": "^8",
 		"prettier": "3.2.5",
+		"prisma": "^5.10.2",
 		"tailwindcss": "^3.3.0",
 		"typescript": "^5"
 	}
